--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "production": "cd ../client && npm install && npm run build && cd ../server && npm install && npm run start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
